2014-02-20  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Bring list of SCRs up to date, and rationalize division of
	declarations between GDB server (GDB numbering) and target
	hardware (memory addresses).

	* src/GdbServer.cpp (GdbServer::GdbServer): Add
	documentation of what a process and thread mean on Epiphany.
	Perform sanity checking of GDB register numbering.
	(GdbServer::targetResume): Use writeReg and GDB register number.
	(GdbServer::rspSuspend): Use isTargetIdle.
	(GdbServer::rspFileIOreply): Use writeReg instead of writeGpr.
	(GdbServer::redirectSdioOnTrap): Use readReg instead of readGpr.
	(GdbServer::rspReadAllRegs): Rewritten completely using readReg.
	(GdbServer::rspWriteAllRegs): Rewritten completely using writeReg.
	(GdbServer::rspReadReg): Rewritten completely using readReg.
	(GdbServer::rspWriteReg): Rewritten completely using writeReg.
	(GdbServer::rspCommand): Use writeReg instad of writeScrGrp0.
	(GdbServer::targetHalt): Use writeReg and readReg with GDB
	register number instead of writeMem32 and readMem32 with hardware
	address.
	(GdbServer::isTargetInDebugState): Use readReg with GDB register
	number instead ofreadMem32 with hardware address.
	(GdbServer::isTargetExceptionState): Replace readCoreStatus with
	readStatus.
	(GdbServer::isTargetIdle): Renamed from isTargetInIldeState.  Use
	symbolic names for flags and fields.
	(GdbServer::rspStep):  Replace readCoreStatus with
	readStatus, readScrGrp0 and readGpr with readReg.
	(GdbServer::rspVpkt): remove double semicolon.
	(GdbServer::rspInsertMatchpoint): Replace MESH_SWRESET by
	RESETCORE_REGNUM.
	(GdbServer::targetSwReset): Use writeReg with GDB register number
	instead of writeMem32 with hardware address.
	(GdbServer::readReg): Created.
	(GdbServer::writeReg): Created.
	(GdbServer::readCoreId): Use readReg with GDB register number
	instead ofreadMem32 with hardware address.
	(GdbServer::readStatus): Renamed from readCoreStatus and rewritten